Stop zoom on mobile

--- a/assets/sass/shop/partials/mobile/_list.sass
+++ b/assets/sass/shop/partials/mobile/_list.sass
@@ -27,3 +27,7 @@
 					&::before
 						left: 40px
 
+					.nice-select-search-box
+						input
+							font-size: 16px
+
